# py-auth

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  env.example  main.py  pyproject.toml
.github/workflows/: build-client.yml
app/: auth.py  database.py  middleware.py  models.py  schemas.py
app/routers/: admin.py  auth.py  user.py
client/: BUILD.md  MANIFEST.in  README.md  example.py  pyproject.toml
client/go/: .gitignore  README.md  authclient.go  cache.go  client.go  crypto.go  device_utils.go  go.mod  go.sum  network.go
client/go/examples/: main.go
client/py_auth_client/: auth_client.py  device_utils.py
client/python/: README.md  requirements.txt
client/python/py_auth_client/: __init__.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue  main.js
web/src/api/: index.js
web/src/assets/: style.css
web/src/components/: AdminPanel.vue  DeviceRow.vue  LoginForm.vue
