[project]
name = "py-auth"
version = "1.0.0"
description = "Python软件授权服务"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.37",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.5",
    "aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "client"]

